--- a/dist-scripts/debian/gmediarender.1
+++ b/dist-scripts/debian/gmediarender.1
@@ -50,12 +50,8 @@ Usually, it is desirable for the renderer
 to show up on controllers under a recognisable and unique name. This is 
 the option to set that name.
 .TP
-.B \-I, \-\-ip\-address \fI\<ip-address\>\fP
-The local IP address the service is running and advertised on.  
-
-This can 
-only be a single address, and must be explicitly specified (i.e. not 
-0.0.0.0).
+.B \-I, \-\-interface\-name \fI\<interface-name\>\fP
+The local interface name the service is running and advertised on.
 .TP
 .B \-p, \-\-port \fI\<port>\fP
 Port to listen to. [49152..65535].
